ios/ios.mm
@@ -20,5 +20,6 @@ extern "C" {
 int loolwsd_server_socket_fd = -1;
 lok::Document *lok_document;
 LibreOfficeKit *lo_kit;
+std::mutex lokit_main_mutex;
 
 // vim:set shiftwidth=4 softtabstop=4 expandtab:
